# aibox

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
aibox/: __init__.py
aibox/cli/: __init__.py  autocomplete.py  main.py
aibox/cli/commands/: __init__.py  common.py  config.py  images.py  init.py  profile.py  slot.py  start.py  status.py
aibox/config/: loader.py  models.py
aibox/containers/: manager.py  orchestrator.py  slot.py  volumes.py
aibox/profiles/: generator.py  loader.py  models.py
aibox/profiles/definitions/: cpp.yml  dotnet.yml  flutter.yml  git.yml  go.yml  java.yml  nodejs.yml  php.yml  python.yml  ruby.yml  rust.yml  sudo.yml
aibox/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py  registry.py
aibox/utils/: errors.py  hash.py
docs/: ARCHITECTURE.md  configuration.md  getting-started.md
tests/: conftest.py
tests/unit/: test_claude_provider.py  test_cli.py  test_commands_config.py  test_commands_profile.py  test_commands_slot.py  test_commands_start.py  test_commands_status.py  test_config.py  test_container_manager.py  test_dockerfile_generator.py  test_errors.py  test_gemini_provider.py  test_hash.py  test_init.py  test_openai_provider.py  test_orchestrator.py  test_placeholder_providers.py  test_profile_loader.py  test_profiles.py  test_providers_base.py  test_registry.py  test_slots.py  test_volumes.py
